# AI-Procurement-Negotiation-Agent

./: .env.example  .gitignore  Dockerfile  FINAL_AUDIT_SUMMARY.md  GAP_ANALYSIS.md  OPENENV_VALIDATION.md  PRODUCTION_AUDIT.md  README.md  README_OLD.md  RISK_ASSESSMENT.md  SETUP.md  SUBMISSION_CHECKLIST.md  SUBMISSION_STATUS.md  VERIFICATION_REPORT.md  environment.py  graders.py  gradio_ui.py  gradio_ui.py.bak  inference.py  inference_llm.py  inspect_openenv.py  launch.py  main.py  main.py.backup  models.py  openenv.yaml  proposed2.txt  pyproject.toml  requirements.txt  run-validator.ps1  run1.txt  run2.txt  scenarios.py  start.sh  test-endpoint.ps1  test-space.ps1  test_fixes.py  timing_run.txt  validate-submission.ps1  validate_env.py
server/: app.py
